--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ul>
             <li>HTML</li>
             <li>CSS</li>
+            <li>jQuery<li>
             
             
         </ul>
